# payment_platform

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py  sign_gen.py
app/api/: __init__.py  auth.py  health.py  payadmit_router.py  payment.py  payments.py  user.py  webhooks.py
app/auth/: auth_service.py  jwt_manager.py  utils.py
app/config/: settings.py
app/db/: database.py  models.py  relationship.py
app/payadmit_integration/: models.py  payadmit_service.py
app/payments/: models.py  payment_repository.py  payments_service.py  schemas.py
app/services/: auth.py  payment.py
app/users/: models.py  schemas.py  user_service.py
migrations/: env.py
migrations/versions/: 41136664756d_initial_migration.py  453b23b9e13d_user_model.py  569b20ad41c0_user_models.py  89082bb2861d_initial_migration.py  aa24c1c246dc_user_payment_models.py  b6090de6544a_initial_migration.py
