[project]
name = "payment-platform"
version = "0.0.1"
description = "Платформа для интеграции с партнерами и проведения платежей через API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.4.0",
    "uvicorn>=0.34.0",
]
